styles/global.css
:root 
{
    font-size: 16px;
    font-family: "Open Sans";
    --text-primary: #b6b6b6;
    --text--secondary: #ececec;
    --bg-primary: #23232e;
    --bg-secondary: #141418;
    --transition-speed: 600ms;
}

body
{
    color: black;
    background-color: white;
    margin: 0;
    padding: 0;    
}

body::-webkit-scrollbar
{
    width: 0.50rem;
}

body::-webkit-scrollbar-track
{
    background: #1e1e24;
}

body::-webkit-scrollbar-thumb
{
    background: turquoise;
}

main
{
    padding: 1rem;
    height: 100%;
}


.welcome-title
{
    text-align: center;

}

.subtitle
{
    text-align: center;
    color: lightslategray;
}

.question
{
    text-align: center;
    color:black;
    font-size: 1.5625rem;
}

.buttons
{
    width: 100%;
    height: 10vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.restartbtn
{   
    width: 100%;
    height: 10vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

button
{
    width: 40vh;
    height: 6vh;
    border: 0;
    margin-top: 3vh;
    margin-bottom: 3vh;
    outline: none;
    background: turquoise;
    color:black;
    font-size: 1.375rem;
    border-radius: 2.5rem;
    text-align: center;
    box-shadow: 0 0.375rem 1.25rem -0.3125rem rgba(0,0,0,0.4);
    transition: var(--transition-speed);
}

.option1:hover
{
    background: yellow !important;
}

.option2:hover
{
    background: yellow !important;
}
.option3:hover
{
    background: yellow !important;
}
.option4:hover
{
    background: yellow !important;
}
.restart
{
    width: 50vh;
    height: 6vh;
    border: 0;
    outline: none;
    background:	#baf2ef;
    color:black;
    font-size: 1.375rem;
    border-radius: 2.5rem;
    text-align: center;
    box-shadow: 0 0.375rem 1.25rem -0.3125rem rgba(0,0,0,0.4);
    transition: var(--transition-speed);
    position: relative;
    overflow: hidden;
    cursor: pointer;
}

.restart:hover
{
    background: coral;
}

.restart::after, .restart:focus,.restart:active
{
    background:turquoise !important;
}

